fix dialog header alignment

--- a/src/app/modules/dialog/dialog.component.css
+++ b/src/app/modules/dialog/dialog.component.css
@@ -38,6 +38,7 @@
 /* accent in dialog header */
 .wily_dialog_accent {
   width:8px;
+  margin-right:2px;
   background-color: rgba(255,255,255,0.25);
 }
 /* make dialog scale to fill screen at mobile breakpoint */
